# graphics2024

./: .gitignore  1.beatmap  1.scene  2.beatmap  2.scene  CMakeLists.txt  README.md  SSDO.md  interaction_guide.md
models/80-venus_1k/: Venus_1K.mtl
models/99-room/: room 1.mtl  room 1.skp
models/Indoor plant 3/: Low-Poly Plant_.mtl
models/Robot/: Robot.mtl
models/ground/: ground.mtl
models/house/: WoodDesk.mtl  ground1.mtl  ground6.mtl  model.mtl
models/wheelchair/: Wheelchair.mtl
src/: .gitignore  CMakeLists.txt  control.cpp  control_deprecated.cpp  init.cpp  main.cpp  util.cpp
src/loader/: CMakeLists.txt  common.cpp  common.hpp  loader.cpp  loader.hpp  material.cpp  material.hpp  particle.cpp  particle.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp
src/util/: CMakeLists.txt  camera.cpp  camera.hpp  common.cpp  common.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  particle.cpp  particle.hpp  scene.cpp  scene.hpp  shader.cpp  shader.frag  shader.hpp  texture.cpp
